accordion spacing fix

--- a/sass/modules/_accordion.scss
+++ b/sass/modules/_accordion.scss
@@ -1,5 +1,4 @@
 .accordion-wrapper {
-
   .accordion-list-item {
     &.open {
       .accordion-item-body {
@@ -20,6 +19,7 @@
       gap: 32px;
       cursor: pointer;
       flex-direction: row-reverse;
+      padding: 12px 0;
 
       .accordion-title {
         font-size: 21px;
